--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -1,20 +1,54 @@
-<div class="contents_block">
+<!-- <div class="contents_block">
     <h1 class="keep-all-break-word glitch-text" style="text-align: center; font-weight: normal; font-size: 2.4rem;">
         誘蛾灯の導き
     </h1>
     <p style="text-align: center;">ファントムシータ 非公式 ファンサイト</p>
+</div> -->
+
+<div id="kv-container">
+    <div class="kv-sp">
+        <img src="/static/kv-sp.png" alt="誘蛾灯の導き kv-sp" class="protected-img">
+    </div>
+    <div class="kv-pc">
+        <img src="/static/kv-pc.png" alt="誘蛾灯の導き kv-pc" class="protected-img">
+    </div>
 </div>
+
+<style>
+    .kv-sp {
+        display: block;
+
+        @media screen and (min-width: 767px) {
+            display: none;
+        }
+    }
+
+    .kv-pc {
+        display: none;
+
+        @media screen and (min-width: 767px) {
+            display: block;
+        }
+    }
+
+    #kv-container {
+        margin: 0 20px 20px 20px;
+    }
+</style>
 
 <div class="contents_block" style="padding-bottom: 0;"><!-- 余白調整 -->
     <!-- Moth to a flame イラスト -->
     <p style="text-align: center; font-size: 1.2rem; font-weight: bold; margin: 0;">1st WORLD TOUR</p>
-    <p style="text-align: center; font-size: 1.8rem; font-weight: bold; margin: 0;">"Moth to a flame"</p>
-    <p style="text-align: center; font-size: 1.4rem; font-weight: bold; margin: 0 0 10px 0;">お疲れさまでした！！</p>
+    <p style="text-align: center; font-size: 1.8rem; font-weight: bold; margin: 0;">"Moth to a flame"
+    </p>
+    <p style="text-align: center; font-size: 1.4rem; font-weight: bold; margin: 0 0 10px 0;">お疲れさまでした！！
+    </p>
     <img src="/static/img/phanart/oan/000-mtaf.jpg" alt="Moth to a flame" loading="lazy"
         class="phanart-popup-img protected-img" style="max-height: 80vh; margin: 0 auto;">
     <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
     <p style="text-align: center;">イラスト：<a href="https://x.com/o_annn_/status/1893589730237063203">おあん</a>さん</p>
-    <p style="text-align: center; margin-bottom: 15px;">他の素敵なイラストは<a href="/?p=phanart.oan">こちら</a>から。</p>
+    <p style="text-align: center; margin-bottom: 15px;">他の素敵なイラストは<a href="/?p=phanart.oan">こちら</a>から。
+    </p>
     <div class="load-content" data-loadfile="/pages/parts/phanart-copyright.html"></div>
 
 </div>
@@ -75,11 +109,10 @@
     <p>大切な注意事項が書いてあるので、ライブに参戦予定の方は要確認です！！(公式ホームページへジャンプします。)</p>
 </div>
 
-
 <div class="contents_block contents_block_has_a">
-    <a class="contents_block_a" href="/?p=articles.2008-moth-to-a-flame-vlog"></a>
-    <h3 class="keep-all-break-word glitch-text">“Moth to a flame” 公式の投稿まとめ</h3>
-    <p>公式より投稿された、“Moth to a flame” Vlogなどの投稿をまとめています。</p>
+    <a class="contents_block_a" href="/?p=articles.2009-dreamscape-video"></a>
+    <h3 class="glitch-text">yosugala presents -DREAMSCAPE-"AICHI"</h3>
+    <p>ハイネの撮影した 動画/写真 まとめ</p>
 </div>
 
 
@@ -99,6 +132,13 @@
         var slider = $('.phanart-slider');
         sliderContainer.append(slider.clone()).append(slider.clone()).append(slider.clone()).append(slider.clone());
     </script>
+</div>
+
+
+<div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="/?p=articles.2008-moth-to-a-flame-vlog"></a>
+    <h4 class="keep-all-break-word glitch-text">Moth to a flame 公式の投稿まとめ</h4>
+    <p>公式より投稿された、“Moth to a flame” Vlogなどの投稿をまとめています。</p>
 </div>
 
 <div class="contents_block contents_block_has_a">
@@ -235,7 +275,8 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.03.11
-        <p><a href="/?p=articles.2008-moth-to-a-flame-vlog">Phantom Siita 1st WORLD TOUR “Moth to a flame” 公式の投稿まとめ</a>
+        <p><a href="/?p=articles.2008-moth-to-a-flame-vlog">Phantom Siita 1st WORLD TOUR “Moth to a
+                flame” 公式の投稿まとめ</a>
             を公開しました。</p>
     </div>
     <hr>
