--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -36,23 +36,6 @@
     }
 </style>
 
-<div class="contents_block" style="padding-bottom: 0;"><!-- 余白調整 -->
-    <!-- Moth to a flame イラスト -->
-    <p style="text-align: center; font-size: 1.2rem; font-weight: bold; margin: 0;">1st WORLD TOUR</p>
-    <p style="text-align: center; font-size: 1.8rem; font-weight: bold; margin: 0;">"Moth to a flame"
-    </p>
-    <p style="text-align: center; font-size: 1.4rem; font-weight: bold; margin: 0 0 10px 0;">お疲れさまでした！！
-    </p>
-    <img src="/static/img/phanart/oan/000-mtaf.jpg" alt="Moth to a flame" loading="lazy"
-        class="phanart-popup-img protected-img" style="max-height: 80vh; margin: 0 auto;">
-    <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
-    <p style="text-align: center;">イラスト：<a href="https://x.com/o_annn_/status/1893589730237063203">おあん</a>さん</p>
-    <p style="text-align: center; margin-bottom: 15px;">他の素敵なイラストは<a href="/?p=phanart.oan">こちら</a>から。
-    </p>
-    <div class="load-content" data-loadfile="/pages/parts/phanart-copyright.html"></div>
-
-</div>
-
 <div class="contents_block">
     <h3 class="glitch-text">公式リンク</h3>
     <ul id="official-link">
@@ -110,6 +93,12 @@
 </div>
 
 <div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="/?p=play.haine-test"></a>
+    <h3 class="glitch-text">ハイネ共通テスト</h3>
+    <p>あなたのシータ力を試してみましょう🔥</p>
+</div>
+
+<div class="contents_block contents_block_has_a">
     <a class="contents_block_a" href="/?p=articles.2009-dreamscape-video"></a>
     <h3 class="glitch-text">yosugala presents -DREAMSCAPE-"AICHI"</h3>
     <p>ハイネの撮影した 動画/写真 まとめ</p>
@@ -147,11 +136,6 @@
     <p>ハイネの撮影した 動画/写真 まとめ</p>
 </div>
 
-<div class="contents_block contents_block_has_a">
-    <a class="contents_block_a" href="/?p=articles.2007-akuma-night-video"></a>
-    <h4 class="glitch-text">悪魔 Night Duel Buster</h4>
-    <p>ハイネの撮影した 動画/写真 まとめ</p>
-</div>
 
 <div class="contents_block">
     <h3 class="glitch-text">まとめ記事</h3>
@@ -255,12 +239,6 @@
     </script>
 </div>
 
-<div class="contents_block contents_block_has_a">
-    <a class="contents_block_a" href="/?p=tatsu.haine-grave"></a>
-    <h4 class="glitch-text">ハイネ墓地</h4>
-    <p>※お遊びコンテンツです</p>
-</div>
-
 
 <div class="contents_block">
     <h3 class="glitch-text">お知らせ</h3>
@@ -270,6 +248,15 @@
             margin: 1% 2%;
         }
     </style>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.04.03
+        <p><a href="/?p=play.haine-test">ハイネ共通テスト</a>
+            を公開しました。</p>
+    </div>
+    <hr>
 
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
@@ -293,4 +280,36 @@
     <div class="link-btn-div">
         <a href="/?p=notice" class="link-btn-a">すべて見る</a>
     </div>
+</div>
+
+
+<div class="contents_block">
+    <h3 class="glitch-text">遊びコンテンツ</h3>
+    <hr class="hr-no-margin">
+
+    <ul class="link-list">
+
+        <a href="/?p=play.haine-grave" class="link-list-a">
+            <li>
+                <p>
+                    <svg role="img" aria-label="蝶々">
+                        <use href="#butterfly"></use>
+                    </svg>ハイネ墓地
+                </p>
+            </li>
+        </a>
+        <a href="/?p=play.haine-test" class="link-list-a">
+            <li>
+                <p>
+                    <svg role="img" aria-label="蝶々">
+                        <use href="#butterfly"></use>
+                    </svg>ハイネ共通テスト
+                </p>
+            </li>
+        </a>
+
+    </ul>
+    <!-- <div class="link-btn-div">
+        <a href="/?p=play" class="link-btn-a">すべて見る</a>
+    </div> -->
 </div>
