--- a/pages/notice.html
+++ b/pages/notice.html
@@ -5,7 +5,17 @@
     <h1 class="glitch-text">お知らせ</h1>
 </div>
 
-<div class="contents_block" id="20250212">
+<div class="contents_block" id="20250403">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.04.03
+        <p><a href="/?p=play.haine-test">ハイネ共通テスト</a>
+            を公開しました。</p>
+    </div>
+</div>
+
+<div class="contents_block" id="20250311">
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
