fix class-name etc

--- a/pages/about.html
+++ b/pages/about.html
@@ -31,15 +31,11 @@
 
 <div class="contents_block">
     <h3>本サイトのコンセプト</h3>
-    <ul class="setlist-ul" style="padding-left: 0;">
-        <li><svg role="img" aria-label="蝶々">
-                <use href="#butterfly"></use>
-            </svg>
+    <ul class="butterfly-list" style="padding-left: 0;">
+        <li>
             <p>ファントムシータの魅力を伝えられるよう発信します。</p>
         </li>
-        <li><svg role="img" aria-label="蝶々">
-                <use href="#butterfly"></use>
-            </svg>
+        <li>
             <p>ハイネの皆様の役に立つコンテンツを目指します。</p>
         </li>
     </ul>
