--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -7,10 +7,14 @@
 
 <!-- <div id="kv-container">
     <div class="kv-sp">
-        <img src="/static/kv-sp.png" alt="誘蛾灯の導き kv-sp" class="protected-img">
+        <div class="protected-img-wrapper">
+            <img src="/static/kv-sp.png" alt="誘蛾灯の導き kv-sp" class="protected-img">
+        </div>
     </div>
     <div class="kv-pc">
-        <img src="/static/kv-pc.png" alt="誘蛾灯の導き kv-pc" class="protected-img">
+        <div class="protected-img-wrapper">
+            <img src="/static/kv-pc.png" alt="誘蛾灯の導き kv-pc" class="protected-img">
+        </div>
     </div>
 </div> -->
 
@@ -35,6 +39,21 @@
         margin: 0 20px 20px 20px;
     }
 </style>
+
+<div class="contents_block">
+    <p>
+        <span class="word-chunk">
+            <span class="word-chunk">本サイトのX(Twitter)アカウント</span>
+            <span class="word-chunk"><a href="https://x.com/mothlamp_info" style="color: #ffcccc;">@mothlamp_info</a>
+            </span>
+            <span class="word-chunk">のフォローも</span><span class="word-chunk">お願いします！</span>
+        </span>
+        <span class="word-chunk">
+            <span class="word-chunk">サイト内のコンテンツ更新の他、</span><span class="word-chunk">公式コンテンツの更新通知や</span>
+            <span class="word-chunk">Web記事の紹介などを</span><span class="word-chunk">投稿しています。</span>
+        </span>
+    </p>
+</div>
 
 <div class="contents_block">
     <h3 class="glitch-text">公式リンク</h3>
