--- a/pages/phanart/guoxoua-nametag.html
+++ b/pages/phanart/guoxoua-nametag.html
@@ -11,10 +11,9 @@
     })();
 </script>
 
-<script src="/static/js/phanart-popup.js"></script>
 
 <style>
-    .phanart-wrapper {
+    .popupimg-wrapper {
         /* nametag用の変更 */
         aspect-ratio: 1.654353562 / 1 !important;
         object-fit: contain !important;
@@ -46,32 +45,34 @@
 <div class="load-content" data-loadfile="/pages/parts/phanart-copyright.html"></div>
 
 <div class="contents_block">
-    <div class="phanart-wrapper">
-        <img src="/static/img/phanart/guoxoua/nametag-00-all.png" alt="" loading="lazy" class="phanart-popup-img">
+    <div class="popupimg-wrapper">
+        <img src="/static/img/phanart/guoxoua/nametag-00-all.png" alt="" loading="lazy" class="popupimg-popup-img">
         <p class="nametag-member">🩷🤍💜💚🩵</p>
     </div>
 </div>
 
 <div class="contents_block">
     <div class="phanart-container">
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/nametag-10-mona.png" alt="" loading="lazy" class="phanart-popup-img">
+        <div class="popupimg-wrapper">
+            <img src="/static/img/phanart/guoxoua/nametag-10-mona.png" alt="" loading="lazy" class="popupimg-popup-img">
             <p class="nametag-member">🩷</p>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/nametag-11-miu.png" alt="" loading="lazy" class="phanart-popup-img">
+        <div class="popupimg-wrapper">
+            <img src="/static/img/phanart/guoxoua/nametag-11-miu.png" alt="" loading="lazy" class="popupimg-popup-img">
             <p class="nametag-member">🤍</p>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/nametag-12-rinka.png" alt="" loading="lazy" class="phanart-popup-img">
+        <div class="popupimg-wrapper">
+            <img src="/static/img/phanart/guoxoua/nametag-12-rinka.png" alt="" loading="lazy"
+                class="popupimg-popup-img">
             <p class="nametag-member">💜</p>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/nametag-13-hisui.png" alt="" loading="lazy" class="phanart-popup-img">
+        <div class="popupimg-wrapper">
+            <img src="/static/img/phanart/guoxoua/nametag-13-hisui.png" alt="" loading="lazy"
+                class="popupimg-popup-img">
             <p class="nametag-member">💚</p>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/nametag-14-moka.png" alt="" loading="lazy" class="phanart-popup-img">
+        <div class="popupimg-wrapper">
+            <img src="/static/img/phanart/guoxoua/nametag-14-moka.png" alt="" loading="lazy" class="popupimg-popup-img">
             <p class="nametag-member">🩵</p>
         </div>
     </div>
@@ -79,54 +80,54 @@
 
 <div class="contents_block">
     <div class="phanart-container">
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-20-miu-mona.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">🤍🩷</p>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-21-rinka-mona.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">💜🩷</p>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-22-hisui-mona.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">💚🩷</p>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-23-mona-moka.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">🩵🩷</p>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-24-miu-rinka.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">🤍💜</p>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-25-miu-hisui.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">🤍💚</p>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-26-moka-miu.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">🩵🤍</p>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-27-rinka-hisui.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">💜💚</p>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-28-moka-rinka.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">🩵💜</p>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/nametag-29-hisui-moka.png" alt="" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <p class="nametag-member">💚🩵</p>
         </div>
     </div>
@@ -136,10 +137,14 @@
     <p>あぐさんの他のイラストは <a href="/?p=phanart.guoxoua">こちら</a></p>
 </div>
 
-<div id="phanart-modal" class="phanart-modal">
-    <span id="phanart-modal-close">×</span>
-    <img class="phanart-modal-content" id="phanart-modal-img">
-    <p><a class="phanart-modal-a" id="phanart-modal-orig-link" href="">X(Twitter)の投稿はこちら</a></p>
+<div id="popupimg-modal">
+    <span id="popupimg-modal-close">×</span>
+    <img id="popupimg-modal-img">
+    <div id="popupimg-modal-protected-img-wrapper" class="protected-img-wrapper">
+        <img id="popupimg-modal-protected-img" class="protected-img">
+    </div>
+    <p><a id="popupimg-modal-orig-link" href="">X(Twitter)の投稿はこちら</a></p>
+    <script src="/static/js/popup-img.js"></script>
 </div>
 
 <div class="load-content" data-loadfile="/pages/parts/phanart-recruit"></div>
