--- a/pages/phanart/oan.html
+++ b/pages/phanart/oan.html
@@ -10,9 +10,6 @@
     })();
 </script>
 
-<script src="/static/js/phanart-popup.js"></script>
-
-
 <div class="contents_block">
     <h1 class="glitch-text" style="font-family: Meiryo, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;">
         おあん</h1>
@@ -29,9 +26,9 @@
 
 <div class="contents_block">
     <!-- Moth to a flame イラスト -->
-    <div class="phanart-wrapper">
+    <div class="popupimg-wrapper protected-img-wrapper">
         <img src="/static/img/phanart/oan/033.png" alt="Moth to a flame" loading="lazy"
-            class="phanart-popup-img protected-img" style="max-height: 80vh; margin: 0 auto;">
+            class="popupimg-popup-img protected-img" style="max-height: 80vh; margin: 0 auto;">
         <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
     </div>
     <div class="tweet-container">
@@ -41,145 +38,145 @@
 
 <div class="contents_block">
     <div class="phanart-container">
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/001.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/001.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1817212985276039491"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/002.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/002.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1817574584289501481"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/003.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/003.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1819255811669217564"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/004.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/004.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1819256114627989743"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/005.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/005.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1819256114627989743"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/006.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/006.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1819256114627989743"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/007.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/007.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1819256206755876904"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/008.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/008.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1819256206755876904"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/009.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/009.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1829509458067874109"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/010.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/010.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1829881541838979428"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/011.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/011.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1830227859585318978"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/012.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/012.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1831135087254962372"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/013.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/013.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1835685893148938571"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/014.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/014.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
                 style="object-position: 50% 0%; /* 上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1835695139500564598"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/015.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/015.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1838136589551317263"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/016.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/016.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1843193810425348173"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/017.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/017.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
                 style="object-position: 50% 0%; /* 上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1844003247503376443"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/018.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/018.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1846461436450742438"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/019.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/019.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
                 style="object-position: 50% 0%; /* 上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1847966607093743754"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/020.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/020.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1847975863318626488"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/021.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/021.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1850190658449060048"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/022.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/022.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1850553038278394205"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/023.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/023.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1850915433706029212"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/024.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/024.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1851277820766699655"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/025.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/025.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1851640218308211060"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/026.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/026.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1852002593309905078"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/027.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/027.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1854282619669651819"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/028.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/028.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1855218530695954693"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/029.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/029.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
                 style="object-position: 50% 0%; /* 上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1857800801391096319"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/030.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/030.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1865735585064997272"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/031.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/031.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1868562667700720093"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/032.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/032.png" alt="" loading="lazy" class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1882083108457185578"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/033.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/033.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
                 style="object-position: 50% 22%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/oan/034.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/oan/034.png" alt="" loading="lazy" class="popupimg-popup-img protected-img"
                 style="object-position: 50% 22%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893618613317157169"></a>
         </div>
@@ -192,10 +189,14 @@
             href="https://x.com/o_annn_">@o_annn_</a> からご覧ください！</p>
 </div>
 
-<div id="phanart-modal" class="phanart-modal">
-    <span id="phanart-modal-close">×</span>
-    <img class="phanart-modal-content" id="phanart-modal-img">
-    <p><a class="phanart-modal-a" id="phanart-modal-orig-link" href="">X(Twitter)の投稿はこちら</a></p>
+<div id="popupimg-modal">
+    <span id="popupimg-modal-close">×</span>
+    <img id="popupimg-modal-img">
+    <div id="popupimg-modal-protected-img-wrapper" class="protected-img-wrapper">
+        <img id="popupimg-modal-protected-img" class="protected-img">
+    </div>
+    <p><a id="popupimg-modal-orig-link" href="">X(Twitter)の投稿はこちら</a></p>
+    <script src="/static/js/popup-img.js"></script>
 </div>
 
 <div class="load-content" data-loadfile="/pages/parts/phanart-recruit"></div>
