--- a/pages/phanart/guoxoua.html
+++ b/pages/phanart/guoxoua.html
@@ -11,9 +11,6 @@
     })();
 </script>
 
-<script src="/static/js/phanart-popup.js"></script>
-
-
 <div class="contents_block">
     <h1 class="glitch-text" style="font-family: Meiryo, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;">
         कㄑ”‎^. .^ ੭</h1>
@@ -31,53 +28,55 @@
     <h3>フリーアイコン</h3>
     <p>アイコンとしての使用⭕️ アイコン以外での使用❌ 自作発言❌</p>
     <div class="phanart-container">
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-21mona.png" alt="もなアイコン" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152835156107468"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-22miu.png" alt="美雨アイコン" loading="lazy" class="phanart-popup-img">
+        <div class="popupimg-wrapper">
+            <img src="/static/img/phanart/guoxoua/icon-22miu.png" alt="美雨アイコン" loading="lazy"
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152844693954960"></a>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-23rinka.png" alt="凛花アイコン" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152835156107468"></a>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-24hisui.png" alt="灯翠アイコン" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152844693954960"></a>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-25moka.png" alt="百花アイコン" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152835156107468"></a>
         </div>
 
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-01mona.png" alt="もなアイコン" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1830947714634314068"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-02miu.png" alt="美雨アイコン" loading="lazy" class="phanart-popup-img">
+        <div class="popupimg-wrapper">
+            <img src="/static/img/phanart/guoxoua/icon-02miu.png" alt="美雨アイコン" loading="lazy"
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1830540898880663622"></a>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-03rinka.png" alt="凛花アイコン" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1828822377775665252"></a>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-04hisui.png" alt="灯翠アイコン" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1830629045912154192"></a>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-05moka.png" alt="百花アイコン" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1829333278551339197"></a>
         </div>
     </div>
@@ -87,8 +86,8 @@
     <h3>名刺用素材</h3>
     <p>保存、書き込みをして名刺として使用⭕️</p>
     <p>自作発言❌</p>
-    <div class="phanart-wrapper">
-        <img src="/static/img/phanart/guoxoua/nametag-00-all.png" alt="" loading="lazy" class="phanart-popup-img"
+    <div class="popupimg-wrapper">
+        <img src="/static/img/phanart/guoxoua/nametag-00-all.png" alt="" loading="lazy" class="popupimg-popup-img"
             style="max-height: 50vh; margin: 0 auto;">
     </div>
     <p style="font-weight: bold;">メンバーごと、ペアの素材は <a href="/?p=phanart.guoxoua-nametag">こちら</a></p>
@@ -97,8 +96,8 @@
 <div class="contents_block">
     <h3>フリーヘッダー</h3>
     <p>ヘッダーとしての使用⭕️ ヘッダー以外での使用❌ 自作発言❌</p>
-    <div class="phanart-wrapper">
-        <img src="/static/img/phanart/guoxoua/header-01.png" alt="ヘッダー" loading="lazy" class="phanart-popup-img">
+    <div class="popupimg-wrapper">
+        <img src="/static/img/phanart/guoxoua/header-01.png" alt="ヘッダー" loading="lazy" class="popupimg-popup-img">
         <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1859945855052341551"></a>
     </div>
     <p class="block-description">ご本人コメント</p>
@@ -116,14 +115,14 @@
         を付けてポストしてね！（1枚目が新版です！）
     </p>
     <div class="phanart-container">
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/profile-02.png" alt="ハイネ自己紹介カード" loading="lazy"
-                class="phanart-popup-img" style="object-position: 50% 0%; /* 左,上 */">
+                class="popupimg-popup-img" style="object-position: 50% 0%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1878391554055995562"></a>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper">
             <img src="/static/img/phanart/guoxoua/profile-01.png" alt="ハイネ自己紹介カード" loading="lazy"
-                class="phanart-popup-img" style="object-position: 50% 0%; /* 左,上 */">
+                class="popupimg-popup-img" style="object-position: 50% 0%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1830473989396877719"></a>
         </div>
     </div>
@@ -134,9 +133,9 @@
 
 <div class="contents_block">
     <div class="phanart-container" style="justify-content: center;">
-        <div class="phanart-wrapper" style="width: 50%;">
+        <div class="popupimg-wrapper" style="width: 50%;">
             <img src="/static/img/phanart/guoxoua/netprint-01.png" alt="ネットプリント" loading="lazy"
-                class="phanart-popup-img">
+                class="popupimg-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1846588456807588100"></a>
         </div>
     </div>
@@ -146,39 +145,39 @@
 
 <div class="contents_block">
     <div class="phanart-container">
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/001.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
-                style="object-position: 50% 10%; /* 左,上 */">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/guoxoua/001.png" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 10%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1832781913985311128"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/002.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
-                style="object-position: 50% 25%; /* 左,上 */">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/guoxoua/002.png" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 25%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1836239387946111203"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/003.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
-                style="object-position: 100% 50%; /* 左,上 */">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/guoxoua/003.png" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 100% 50%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1847851879554044099"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/004.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
-                style="object-position: 50% 0%; /* 左,上 */">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/guoxoua/004.png" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 0%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1857800845305458853"></a>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper protected-img-wrapper">
             <img src="/static/img/phanart/guoxoua/005.png" alt="" loading="lazy"
-                class="phanart-popup-img protected-img">
+                class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1876981220011102482"></a>
         </div>
-        <div class="phanart-wrapper">
+        <div class="popupimg-wrapper protected-img-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-10moka.png" alt="" loading="lazy"
-                class="phanart-popup-img protected-img">
+                class="popupimg-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1877614040035332495"></a>
         </div>
-        <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/006.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
-                style="object-position: 50% 0%; /* 左,上 */">
+        <div class="popupimg-wrapper protected-img-wrapper">
+            <img src="/static/img/phanart/guoxoua/006.png" alt="" loading="lazy"
+                class="popupimg-popup-img protected-img" style="object-position: 50% 0%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1896533752597393846"></a>
         </div>
     </div>
@@ -190,10 +189,14 @@
             href="https://x.com/uxwou_4">@uxwou_4</a> からご覧ください！</p>
 </div>
 
-<div id="phanart-modal" class="phanart-modal">
-    <span id="phanart-modal-close">×</span>
-    <img class="phanart-modal-content" id="phanart-modal-img">
-    <p><a class="phanart-modal-a" id="phanart-modal-orig-link" href="">X(Twitter)の投稿はこちら</a></p>
+<div id="popupimg-modal">
+    <span id="popupimg-modal-close">×</span>
+    <img id="popupimg-modal-img">
+    <div id="popupimg-modal-protected-img-wrapper" class="protected-img-wrapper">
+        <img id="popupimg-modal-protected-img" class="protected-img">
+    </div>
+    <p><a id="popupimg-modal-orig-link" href="">X(Twitter)の投稿はこちら</a></p>
+    <script src="/static/js/popup-img.js"></script>
 </div>
 
 <div class="load-content" data-loadfile="/pages/parts/phanart-recruit"></div>
