--- a/pages/tatsu/profile.html
+++ b/pages/tatsu/profile.html
@@ -1,13 +1,33 @@
 <div id="page-title" style="display: none;">プロフィール [tatsu]</div>
 <div id="page-description" style="display: none;">本サイト運営者 tatsu のプロフィールです。</div>
 
+<style>
+    img {
+        max-height: 45vh;
+        margin: 0 auto;
+    }
+</style>
+
 <script>
     (function () {
         let currentUrl = new URL(window.location.href);
         let currentParams = new URLSearchParams(currentUrl.search);
-        history.replaceState(null, "", "/r/tatsu-profile?" + currentParams.toString());
+        let anchor = currentUrl.hash; // アンカー部分を取得
+        history.replaceState(null, "", "/r/tatsu-profile?" + currentParams.toString() + anchor);
     })();
 </script>
+
+
+<div id="popupimg-modal">
+    <span id="popupimg-modal-close">×</span>
+    <img id="popupimg-modal-img">
+    <div id="popupimg-modal-protected-img-wrapper" class="protected-img-wrapper">
+        <img id="popupimg-modal-protected-img" class="protected-img">
+    </div>
+    <p><a id="popupimg-modal-orig-link" href="">リンクはこちら</a></p>
+    <script src="/static/js/popup-img.js"></script>
+</div>
+
 
 <div class="contents_block">
     <h1 class="glitch-text">tatsu プロフィール</h1>
@@ -91,6 +111,16 @@
         <li><a href="#haine">2024.11.01 - 1st LIVE 「ハイネ」 @日本武道館</a></li>
         <li><a href="#akumanight">2024.12.17 - 悪魔のキッスpresents「悪魔Night Duel Buster」 @Spotify O-EAST</a></li>
         <li><a href="#cdj2425">2024.12.30 - COUNTDOWN JAPAN 2425 @幕張メッセCOSMO STAGE</a></li>
+        <li><a href="#dreamscape">2025.03.23 - yosugala presents -DREAMSCAPE-"AICHI" @名古屋CLUB QUATTRO</a></li>
+        <li><a href="#ladysteady">2025.04.05 - Lady Steady Premium @品川ステラボール</a></li>
+        <li><a href="#oceanmarket">2025.05.01 - OCEAN MARKET FES 2025 シータの宵祭り @横須賀市 三笠公園</a></li>
+
+
+        <!-- <li><a href="">2025.07.21 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @Kanadevia Hall (TOKYO DOME CITY HALL)</a></li>
+        <li><a href="">2025.08.02 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @なんばHatch</p>
+            </a></li>
+        <li><a href="">2025.08.03 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @COMTEC PORTBASE</a></li>
+        <li><a href="">2025.08.24 - 1st JAPAN TOUR 「フレイム・メドゥーサ」 @豊洲PIT</a></li> -->
 
     </ul>
 
@@ -136,18 +166,20 @@
     <hr>
     <h4 class="glitch-text" id="akumanight">2024.12.17 - 悪魔のキッスpresents「悪魔Night Duel Buster」 @Spotify O-EAST</h4>
     <p>整理番号35番</p>
-    <img src="/static/img/admin/20241217-001.jpeg" alt="">
+    <img src="/static/img/tatsu/20241217-001.jpeg" alt="" class="popupimg-popup-img">
     <p>
         【入場前】
         整理番号がまさかの35番と、すごくいいものを運良く抽選で手に入れたので、すごい満足いく動きできた。入場時にみんなとの集合チェキ券買えて、サイン入り色紙プレゼントのCDも買えて、トレカの購入列もすぐ5人くらい並んで買えた。
     </p>
-    <img src="/static/img/admin/20241217-002.png" alt="">
+    <div class="popupimg-wrapper protected-img-wrapper">
+        <img src="/static/img/tatsu/20241217-002.png" alt="" class="popupimg-popup-img protected-img">
+    </div>
 
     <p>
         この後にトレカに並び直すのOKってスタッフさんに言われてたからもう一周並んだんだけど、ちょっと人増えてたのもあってステージからの列は少し後ろになっちゃった。結果的にはこの選択が正しかっただろうという結論になるわけなんだけれども。
         そんなで取れた場所はほぼセンターの5列目くらい。35番っていう番号からしたらちょっと後ろだけど、全然いい位置はとれてよかった。
     </p>
-    <img src="/static/img/admin/20241217-003.jpeg" alt="">
+    <img src="/static/img/tatsu/20241217-003.jpeg" alt="" class="popupimg-popup-img">
     <p>
         【ライブ】
         開始のアナウンスから、ファントムシータのパフォーマンスでスタート。いつもの入場SEで入ってきて、ゾクゾクから、魔性少女、花喰み、乙女心中、おともだち、好き好き大好き、キミバツ、というセトリ。途中に2回MCがあった。撮影可能ってのもあったから一応スマホで動画撮りながら構えてたけど、そんなカメラ画質のいいスマホではないからそっちはほぼ気にせずにちゃんと見るのに神経向けてた。会場小さいし近いのもあって、みんなの表情とか、頬に垂れてる汗とかが肉眼で見えるレベル。パフォーマンスの細かさとか、怖さに対しての表現をすごく感じられてよかった。曲のアレンジも、音源とは結構違うし、ハイネの時とも変わってたり増えてたり、表現の幅が広がっているんだなって感じて良かった。
@@ -161,13 +193,13 @@
     <p>
         戦慄かなのちゃんが、可愛かった。あんな人いるんですね、映像見た時にも思ってたけど実物を見ると余計にね。あとは開演前だけど、せっかくのツーマンライブだから、その記念として悪魔のキッスのグッズも1つくらい欲しいなと思って、悪魔の角のカチューシャを買った。可愛くて良い。
     </p>
-    <img src="/static/img/admin/20241217-004.jpeg" alt="">
+    <img src="/static/img/tatsu/20241217-004.jpeg" alt="" class="popupimg-popup-img">
     <p>
         【特典会】
         ライブ後少し準備時間を空けて、ファントムシータのメンバー全員とのチェキ撮影の特典会。途中で機械のトラブルとかで並んでる時間長かったな。雰囲気としてはメンバーとパーテーションで仕切られてるけどその真ん中に入ることができて、ポーズの指定をして写真撮れるって感じ。直前までポーズ迷ってたけど、シータポーズにしてもらった。定番だけどやっぱり一番それっぽくて良い。退場するときに、自作したメンバーカラーのおともだちチャーム見せたら、すごーい！かわいいー！ってリアクションもらえて嬉しかった。
     </p>
-    <img src="/static/img/admin/20241217-005.jpeg" alt="">
-    <img src="/static/img/admin/20241217-006.jpeg" alt="">
+    <img src="/static/img/tatsu/20241217-005.jpeg" alt="" class="popupimg-popup-img">
+    <img src="/static/img/tatsu/20241217-006.jpeg" alt="" class="popupimg-popup-img">
     <p>
         【トレカ】
         入場時に買ったトレカは、全然余裕なくてライブ終わるまで開封できなかったから、夕飯の店入ってから全部開封。上限枚数で2周したから、25×2で50枚。全15種だからコンプできるはずだと思ってたけど、結果的には1種類だけ足りなかった、まじか。
@@ -175,7 +207,9 @@
     <p>
         ただ、それが一旦どうでも良くなるくらいのこともあって、開封があと5枚くらいのところでもなちゃんと美雨ちゃんのツーショットのに直筆サイン入りのが！！人生初でのランダムでのサイン入りで推しのもなちゃんのサインが来てくれて、それも美雨ちゃんと2人でのめっちゃ可愛い写真。びっくりして、嬉しさと驚きとでちょっと息できなかった。こんなのいただけるのしあわせすぎる。本気で大切にする。
     </p>
-    <img src="/static/img/admin/20241217-007.png" alt="">
+    <div class="popupimg-wrapper protected-img-wrapper">
+        <img src="/static/img/tatsu/20241217-007.png" alt="" class="popupimg-popup-img protected-img">
+    </div>
     <p>
         【その他：ライブ前】
         朝から一旦会場に行って、数日前くらいからちょっと話をさせてもらってたハイネの方々数人とご一緒させてもらって、今回の物販とかが待機する必要がないってのを聞いて確定したとこからカラオケ行ってきた。結構な時間、シータとAdoちゃん中心に色々歌ってたり、休憩でMV流しながらお話してたりで楽しかった。
@@ -184,7 +218,6 @@
 
     <hr>
     <h4 class="glitch-text" id="cdj2425">2024.12.30 - COUNTDOWN JAPAN 2425 @幕張メッセCOSMO STAGE</h4>
-    <p>※写真は後ほど追加予定</p>
     <p>
         CDJの参加アーティスト第二弾として、Adoとファントムシータが発表されたとき、さすがにこれは行くしかない、ってことで申し込みして当選。前方エリアの抽選は、シータ第一希望としたけど外れたので、全部を一般枠のエリアで観ることに。
     </p>
@@ -195,13 +228,13 @@
     <p>
         当日、始発で向かって、7時頃に到着。多分全体の500番目とかそれくらいだったんじゃないかな。9時半開場して入場、グッズ販売で先にAdoちゃんに並びつつ、同行していた友人が自分の買い物を早く終わらせていたのでシータの方は任せて買ってもらった。
     </p>
-    <img src="/static/img/admin/20241230-001.jpeg" alt="">
+    <img src="/static/img/tatsu/20241230-001.jpeg" alt="" class="popupimg-popup-img">
     <p>
         オフシャルグッズ受け取りとクロークを済ませて会場のステージ側へ。まだまだ全然人は入っていなくて、フォトスポットだけ少し並んでるんみたいな感じだった。</p>
     <p>
         チラッとCOSMOステージの様子みて、一般の最前だけ人いるみたいな感じ。ここからシータ終わりまでずっとステージにいる予定だったので、空いてるうちにフェス飯。台湾混ぜそば食べた。
     </p>
-    <img src="/static/img/admin/20241230-002.jpeg" alt="">
+    <img src="/static/img/tatsu/20241230-002.jpeg" alt="" class="popupimg-popup-img">
     <p>
         準備してステージに入って、全体の開演まで1時間半くらいとかの時点で一般エリアの3列目くらい。超いい感じ。
     </p>
@@ -222,7 +255,7 @@
         4アーティスト目「ファントムシータ」
         今回のメインの目的だったシータ。ずっと同じステージで待ってたから、前方エリアすぐ後ろの柵最前取れてて、ドセンのちょい左、最高の位置。
     </p>
-    <img src="/static/img/admin/20241230-003.jpeg" alt="">
+    <img src="/static/img/tatsu/20241230-003.jpeg" alt="" class="popupimg-popup-img">
     <p>
         リハ-1、5人直立でのおともだち、音の調整とかもあるはずだけど、その中での歌声、シンプルに歌声だけの感じで良かった。ついに始まるんだな、という実感。
     </p>
@@ -260,7 +293,7 @@
     <p>
         シータが終わって、あとはラストのAdoちゃんをある程度の良い位置で見れたらいいなと思っていたので、しばらく外で休憩とご飯。いくらとサーモンの親子丼。美味しかったが、やっぱフェス飯は高いな。Adoちゃんに余裕持てるくらいの想定時間までゆっくり過ごしてから、EARTHステージに移動。
     </p>
-    <img src="/static/img/admin/20241230-004.jpeg" alt="">
+    <img src="/static/img/tatsu/20241230-004.jpeg" alt="" class="popupimg-popup-img">
     <p>
         5アーティスト目「Eve」
         曲もそんなに知らなかったのと、立ち位置も結構後ろの方で見えなかったけど、かっこよかった。周りの人のノリに合わせて跳んだり声出したりでも楽しかった。ちょっとは聞いたことあるような曲もいくつかあった気がする。
@@ -275,5 +308,99 @@
     <p>
         最高の締めくくりで今年のCDJ2425の3日目は終了。始発で向かってから、順調にグッズ買えて、スケジュール通りにライブ見れて、ご飯も食べる時にちゃんと食べれて、素晴らしいプランだった。早起きは三文の徳どころじゃない、数万円。楽しかった。
     </p>
-    <img src="/static/img/admin/20241230-005.jpeg" alt="">
+    <img src="/static/img/tatsu/20241230-005.jpeg" alt="" class="popupimg-popup-img">
+
+
+    <hr>
+    <h4 class="glitch-text" id="dreamscape">2025.03.23 - yosugala presents -DREAMSCAPE-"AICHI" @名古屋CLUB QUATTRO</h4>
+    <p>整理番号99番</p>
+    <p>
+        1月31日、ワールドツアーの後に日本でのライブとかなんかないかなぁって雰囲気になっている中での唐突な「🦋おしらせ🦋」が公式アカウントから。帰国後最初と思われるイベントが名古屋ってことで、初めての遠征の予定が決まった。
+    </p>
+    <p>
+        ここから、前回の悪魔のキッスとのツーマンの時とも同じように、事前に対バンのお勉強したいってことでYoutubeとかでライブ映像見たりしてみたら、曲調も好きで、歌声かっこよくて、すごいいいなと感じた。せっかくなので名古屋までの間に別のライブがあったりしないかなと思って調べてみたら一般チケット買えるのがすぐにあって、予定も大丈夫だったので購入。行ってみたらめっちゃ良すぎて、名古屋の予習のためだったはずなのにそれまでに3回も東京でのライブ行ってた。ただ単にハマっちゃっただけ。君島凪ちゃん推しになって、ファントムシータポーズでチェキ撮ってもらったりした。
+    </p>
+    <img src="/static/img/tatsu/20250323-001.jpeg" alt="" class="popupimg-popup-img">
+    <p>
+        【前日】
+    </p>
+    <p>
+        名古屋までの夜行バスに乗る前、駅の近くで前夜祭（という名の飲み）。遠征イベントはここからスタート。実は夜行バスに乗るのが初めて。ネックピローとか用意してたけど、なんか全然寝れなかった。もうちょい高いバスにしたらいけたりするのかな？
+    </p>
+    <p>
+        【朝～開場前】
+    </p>
+    <p>
+        朝5時過ぎには名古屋に到着。関東からそこそこ近いからすごい早い時間について、どこも開いてなくて仕方ないのでとりあえず駅前で写真。そして名古屋に降りるの初めて。</p>
+    <img src="/static/img/tatsu/20250323-002.jpeg" alt="" class="popupimg-popup-img">
+    <p>ナナちゃん人形でハイネと合流、一緒にモーニング行こうって話してた人たち。どうやらちょっと特別な日だったみたいで、人形の写真を結構ちゃんと撮りに来てる人がたくさんいた。</p>
+    <img src="/static/img/tatsu/20250323-003.jpeg" alt="" class="popupimg-popup-img">
+    <img src="/static/img/tatsu/20250323-004.jpeg" alt="" class="popupimg-popup-img">
+    <p>行きたかったお店の整理券取ったらしばらく先で、もう一軒にも行ってみたけどすごく並んでいて無理そうだったので、一旦コメダモーニングで受付時間まで待機。既にモーニングはしごするのは確定ってことで。</p>
+    <img src="/static/img/tatsu/20250323-005.jpeg" alt="" class="popupimg-popup-img">
+    <p>整理券の時間になって、更にハイネ合流、目的だった「つばめパン」さんへ。人気店過ぎて、自分たちが入店するころには整理券の時間が昼を超えてた。さっきコーヒー飲んだから、ここではイチゴプリンのドリンクみたいなやつと小倉トースト。パンがおいしかった。
+    </p>
+    <img src="/static/img/tatsu/20250323-006.jpeg" alt="" class="popupimg-popup-img">
+    <img src="/static/img/tatsu/20250323-007.jpeg" alt="" class="popupimg-popup-img">
+    <p>荷物をホテルにおいてから会場に向かいたくて、チェックイン時間まで2時間くらいあったので、時間潰しでカラオケへ。とりあえず痛バ写真撮ったりしてから、歌おうかというところだけど、前にハイネとカラオケ行ったときと同じで、マイク使わずにファントムシータの曲を入れて合唱してた。これが超楽しいんよね。
+    </p>
+    <img src="/static/img/tatsu/20250323-008.jpeg" alt="" class="popupimg-popup-img">
+    <p>
+        ホテルで準備して、いざ会場前へ。入口付近は集まらないようにみたいなアナウンスがされていたらしく、外でいろんな方に会ったり、蝶々のヘアピンを渡したりしてた。本当はもっとゆっくり、一緒に写真撮ったりしたかったんだけど、結構時間がギリギリになっちゃってて思った通りのことができなかったのは反省。でもいっぱい挨拶できた。(冷静に見ると、だいぶ凄い格好してるね...)
+    </p>
+    <img src="/static/img/tatsu/20250323-009.jpeg" alt="" class="popupimg-popup-img">
+    <p>
+        【ライブ】
+    </p>
+    <p>
+        ついに入場。整理番号いい感じだったので、ドリンク代を払った後、特典会の桃色の参加券を無事購入できた。大切にしまいつつフロアへ。どのあたりに行くのか迷ってたけど、前回のツーマンでは中央の少し後ろから見ていたのと、下手のステージからはみ出る横の部分が最前まで行ける空間が空いていたのでそこに決定。目の前は壁だけど、ステージをちょうど横から見れる位置で、ステージにも手が届いてしまいそうな距離。最高の位置です。今日のために作ってきた「も」「な」ペンライト持ってスタンバイ。
+    </p>
+    <img src="/static/img/tatsu/20250323-010.jpeg" alt="" class="popupimg-popup-img">
+    <p>
+        ライブについてはもう本当に全体的に記憶がないのはいつものことなので、内容が薄くなっちゃうんだけど。とりあえずいつもの安定のSEで入場。ワールドツアーおかえり、ってのもあり、いつもここでちょっと涙が。今回も例にもれず、あああってなってた。そして1曲目ゾクゾク、最後なのもいいけど、最初に持ってくるのいいよね。全員センターの曲からスタートで、ここからライブが始まっていく感じ。続くおともだち、魔性、花喰みは、絶対やるとほぼ分かっていたのもあって、すごく特別なことはなかったけど、歌い方での感情の乗せ方とかダンスの振付の細かい部分とか、前に見たことあるなって覚えているものから変わっていて、表情の出し方とかも合わさってレベルアップしてるんだろうなってのをすごく感じた。ワールドツアーで短期間にたくさんのライブをするってのが、すごく大きな意味があったんだなって。続いて最初のMC、ツーマンとして結構長めの尺が取られていたのもあって、自己紹介と最初のトークがそこそこ長め。前回のCDJが爆速挨拶だったなぁ。
+    </p>
+    <p>
+        そして次の曲、ここでまさかのラムのラブソング！！！ハイネの時に武道館で聴いていたはずだけど、例のごとく全く記憶がないので、このタイミングで聴けるってのが大変な気持ち。しかも今回は撮影可能ってので残るのもやばい。もなちが下手側の端で踊ってるときに、もなペンライトに気付いてくれて目線貰ってニコってしてくれて、ずーっともなちのこと見てたからちゃんと目が合ったし、そのタイミングもカメラにも収められていてもう感動。。。ありがとう、最高です。
+    </p>
+    <div class="tweet-container">
+        <a class="twitter-tweet-data" href="https://x.com/ta_moon_/status/1903871766717755796"></a>
+    </div>
+    <p>
+        もうこの時点で結構いろいろ満足してしまっていたけど、もはや定番となった好き好き大好き、乙女心中のあと、HANAGATAMIが！！なんとなく曲のテーマとか雰囲気的に、ワンマンでしか披露しないんじゃないかと思ってたから、嬉しかった。それもあんな距離でゆっくり見れたの幸せでしかない。そしてまた次がムーンライト伝説、これはワールドツアーの曲から1つくらいはセトリ入りするんじゃないかなって予想はしていて、だとするとこの曲かなとは思ってたから、想定範囲だったけどめっちゃ嬉しかった、ワールドツアーのセトリでも特に聞きたかった曲。もなちの立ち位置も下手がすごく多くて、近くて良かった。最後のMCから、ラストのキミバツ。ラスサビ前のところは上手側だから、今度はそっち側に行ってみようかな。全体で見たらどっちがいいんだろう。一番最後の座って指をバッテンにしているところが、最前からだとちゃんと見えたのが感動。最高だった。
+    </p>
+    <p>yosugalaのライブについては、ここに書くことでもない気はしたけどちょっとだけ。だいたいのコール・MIXを覚えたし、曲もちゃんと全部分かる状態で、本気で声出しして振付もやるつもりで来ていた。そしてこれまで行ったライブは全部一般チケットを直前に買ってたので、後ろの方からの参戦だったんだけど、初めてほぼ最前で。周りの人たちの声もすごいし、メンバーも近いしで楽しかった。yosugalaは凪ちゃん推しなんだけど、前回までのライブで覚えてくれてて、途中で目が合った時に、「あ！いた！！」って感じの表情してくれて、終演後の特典会でもそのこと話してくれて、嬉しかった。
+    </p>
+    <p>
+        【特典会】
+    </p>
+    <p>
+        特典会の開始時、先にyosugalaの方の列がすごいからそっちに並んでからのほうがいいかなってことで並んでたんだけど、想定してたよりもシータの列の進みが早くて、yosugalaファンの方からも、列が途切れちゃったらそこで終わりにされちゃってどうしようもなくなるから行った方がいい、とのことで、急いで向かった。列についたら20人ちょっとくらいの残りで、全部で何人分あったのかは分からないけど、実は結構危なかったのかもしれない。どなたかもしれないあのときに声かけてくれた方々、本当にありがとうございました。というわけで最後尾となったので、せっかくだから最後尾の札の写真も。
+    </p>
+    <img src="/static/img/tatsu/20250323-011.jpeg" alt="" class="popupimg-popup-img">
+    <p>
+        今回はチェキの手渡しでちょっとお話しできるってことで、でもいざ目の前にもなちがいる状況になると全然話したいことが何も出てこなくて、とりあえず持ってた痛バと作ったペンラ見せて、反応してくれてた。そのあと、「わ！すごい！めっちゃ缶バッジついてる！！」って、来てた痛パーカー（？）のこと言ってくれて、これ作って着て来てよかった。ちなみにライブ中はさすがに邪魔すぎるしカチャカチャ音が鳴るので着てなかったですよ。そしてこの時に渡されたチェキ、ファントムシータの文字が書いてあるってのは知ってて、落書きとかあるんだろうなーと思っていたんだけど、見てみてびっくり。怒っているマークついてて「もなだけ見てて!!」とは...。なんという可愛さ、そして嫉妬されてる感？もなち、さすがにそれはずるいよ。しかも、この名古屋のライブに向けてでyosugalaの曲ばっかり聞いてたし、予習のはずが3回ライブ行ってるくらいにハマってたのを自分でもすごく感じていた上でのこのメッセージは、もう完全に自分のために書かれたものでしかないじゃん。もなだけ、見るよ。うん。ありがとう。好き。
+    </p>
+
+    <div class="popupimg-wrapper protected-img-wrapper">
+        <img src="/static/img/tatsu/20250323-012.jpeg" alt="" class="popupimg-popup-img protected-img">
+    </div>
+    <p>
+        【飲み会[ハイネの怪宴会]】
+    </p>
+    <p>
+        ライブ後、といったら飲み会ですね。今回、結構大人数での飲み会を企画させてもらって、30人を超えるハイネが集まってくれた。ライブと特典会の余韻の冷めないまま、これまでの推し活であったり、ライブの時の話であったり、その他で2時間、いっぱいおしゃべりして楽しい時間を過ごすことができた。参加してくれた皆様、運営を手伝ってくれた方々、ありがとう。ぜひまた他の現場でも。
+    </p>
+    <img src="/static/img/tatsu/20250323-013.jpeg" alt="" class="popupimg-popup-img">
+
+
+    <!-- <hr>
+    <h4 class="glitch-text" id="dreamscape">2025.04.05 - Lady Steady Premium @品川ステラボール</h4>
+    <p>整理番号A-37番</p> -->
+
+
+    <!-- <hr>
+    <h4 class="glitch-text" id="dreamscape">2025.05.01 - OCEAN MARKET FES 2025 シータの宵祭り @横須賀市 三笠公園</h4>
+    <p>整理番号????番</p> -->
+
+
 </div>
