--- a/index.html
+++ b/index.html
@@ -66,28 +66,46 @@
     <script src="/static/js/pwabuttons.js"></script>
     <script src="/static/js/reload.js"></script>
 
-    <!-- <script src="/static/js/async-load-twitter.js"></script> -->
     <script>
         $('head').append('<script src="/static/js/async-load-twitter.js?nocache=' + new Date().getTime() + '" />');
     </script>
     <script>
         $('head').append('<script src="/static/js/async-load-youtube.js?nocache=' + new Date().getTime() + '" />');
     </script>
+    <script src="/static/js/butterfly-list.js"></script>
     <script src="/static/js/glitch-animation.js"></script>
+    <script src="/static/js/protected-img.js"></script>
     <script src="/static/js/visibility-control.js"></script>
 
 
     <style>
         #bg_0 {
-            background-image: url("/static/img/bg.png");
+            background-image: none;
             background-size: cover;
         }
 
-        #bg_1,
-        #bg_2,
-        #bg_3,
+        #bg_1 {
+            background-image: url("/static/bg/bg-1.png");
+        }
+
+        #bg_2 {
+            background-image: url("/static/bg/bg-2.png");
+        }
+
+        #bg_3 {
+            background-image: url("/static/bg/bg-3.png");
+
+            @media screen and (min-width: 767px) {
+                background-image: url("/static/bg/bg-3-pc.png");
+            }
+        }
+
         #bg_4 {
-            background-image: none;
+            background-image: url("/static/bg/bg-4.png");
+
+            @media screen and (min-width: 767px) {
+                background-image: url("/static/bg/bg-4-pc.png");
+            }
         }
     </style>
     <!-- tatsu head end -->
@@ -320,6 +338,12 @@ l105 32 120 106 c66 58 146 127 178 153 l59 47 -434 -2 c-238 -1 -458 -3 -488
         </div>
         <div id="menu_space_btm"></div>
     </div>
+
+    <script>
+
+
+    </script>
+
 </body>
 
 
