--- a/pages/phanart/oan.html
+++ b/pages/phanart/oan.html
@@ -11,7 +11,7 @@
 </script>
 
 <div class="contents_block">
-    <h1 class="glitch-text" style="font-family: Meiryo, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;">
+    <h1 class="glitch-text">
         おあん</h1>
     <p><a href="https://x.com/o_annn_">@o_annn_</a></p>
 </div>
