--- a/pages/tatsu/profile.html
+++ b/pages/tatsu/profile.html
@@ -112,7 +112,7 @@
         <li><a href="#akumanight">2024.12.17 - 悪魔のキッスpresents「悪魔Night Duel Buster」 @Spotify O-EAST</a></li>
         <li><a href="#cdj2425">2024.12.30 - COUNTDOWN JAPAN 2425 @幕張メッセCOSMO STAGE</a></li>
         <li><a href="#dreamscape">2025.03.23 - yosugala presents -DREAMSCAPE-"AICHI" @名古屋CLUB QUATTRO</a></li>
-        <li><a href="#ladysteady">2025.04.05 - Lady Steady Premium @品川ステラボール</a></li>
+        <li><a href="#ladysteadypremium">2025.04.05 - Lady Steady Premium @品川ステラボール</a></li>
         <li><a href="#oceanmarket">2025.05.01 - OCEAN MARKET FES 2025 シータの宵祭り @横須賀市 三笠公園</a></li>
 
 
@@ -392,11 +392,33 @@
     </p>
     <img src="/static/img/tatsu/20250323-013.jpeg" alt="" class="popupimg-popup-img">
 
+    <p>
+        【次の日】
+    </p>
+    <p>
+        せっかく名古屋に行ったので、次の日も遊んでから帰ろうってことで、ハイネたちと明治村ってところの謎解きをしてきた。もともと趣味で謎解きは好きだったのもあって、割とスムーズにできたし楽しかった。
+    </p>
+    <img src="/static/img/tatsu/20250323-014.jpeg" alt="" class="popupimg-popup-img">
 
-    <!-- <hr>
-    <h4 class="glitch-text" id="dreamscape">2025.04.05 - Lady Steady Premium @品川ステラボール</h4>
-    <p>整理番号A-37番</p> -->
-
+    <hr>
+    <h4 class="glitch-text" id="ladysteadypremium">2025.04.05 - Lady Steady Premium @品川ステラボール</h4>
+    <!-- <p>整理番号A-37番</p> -->
+    <p>この日はアイドルフェス、っていうのが多分正解のイベント、ファントムシータだけじゃなくてyosugalaと悪魔のキッスも出演があって、他にもいくつか聴いたことあるアイドルもいたのでそれも楽しみだった。</p>
+    <p>開場に合わせて行って下見しておいてから、お昼食べてから戻ってyosugalaの待機。前方エリアで少し見ていて3列目くらい。始まってすぐに凪ちゃんに見つけてもらって超絶ファンサもらった。『オヒメサマ?』のおいおいのところでめっちゃ目合わせながら両手で手を振ってくれた。嬉しい。特典会でもすぐ見つけてくれたよねーってお話。また行く。特典会で、今回はちょっと時間の余裕ありそうだったから全員いけたらいいなと思ってて、頑張ってみたらギリギリだったけど無事全員とチェキ撮ってご挨拶できた。未来ちゃんと初めましてなのに名札で認知されてたのがびっくり。
+    </p>
+    <img src="/static/img/tatsu/20250405-001.jpeg" alt="" class="popupimg-popup-img">
+    <p>
+        悪魔のキッス、シータとのツーマン以来ですごく良かった。一曲目からバリケード乗って、客フロア降りてきて前方と一般の間の柵のところでファンの上に乗って歌ってたり。かっこよかった。
+    </p>
+    <p>
+        そしてファントムシータ、下手寄り3列目で。いつものSEで入場してきて始まる体制になったときに、もなちが私のペンライト見て、「ふっ」って感じで目を反らされた（という妄想？）。もう満足です。みんなの髪型がいつもと違う、ってので、入場の暗いときにはぱっと見でどれが誰か分からないくらいだったのも新鮮。どうやらもなちはいつも通りだったみたいね、何が違うんだろう？と思ってたらそれは予想外。前回とか撮影可能だったりすると完全に見るのに集中できなくなっちゃうのもあったけど、今回は本気で見ていることができて、やっぱりこっちの方がいいなって。一曲暗いだけ撮影可能があるみたいなのがいいよなっても思う。ムーンライト伝説もまた見れた。フェス向けもある感じのセトリだったけど、おともだちがなかったのはびっくり。そんなことあるんだね。
+    </p>
+    <p>特典会、並んでるときにちょっといろいろあって、もなちの券は自分のだいぶ前で売り切れてしまっていた。まあ、箱推しでもあるので、ある程度まあいいんだけれども。髪の毛おろしてるの良かった。貰ったチェキのコメントが「人間やめよ」ってことについて、歌詞の「人間、やめてみる？」の後に「やめます！！！！」って叫ぶのをやっていたから、そのことを言ったら、実はそこで行ってる人たちがいるのをちょっと聞こえているとのこと。イヤモニしてても聞こえるんだね、びっくり。
+    </p>
+    <img src="/static/img/tatsu/20250405-002.png" alt="" class="popupimg-popup-img">
+    <p>
+        ということで今回はこんな感じ。他のアイドルも、オタクのコールとかも合わせて楽しかった。アイドルフェスっていいね。
+    </p>
 
     <!-- <hr>
     <h4 class="glitch-text" id="dreamscape">2025.05.01 - OCEAN MARKET FES 2025 シータの宵祭り @横須賀市 三笠公園</h4>
