update logo etc.

--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -1,22 +1,22 @@
-<div class="contents_block">
+<!-- <div class="contents_block">
     <h1 class="keep-all-break-word glitch-text" style="text-align: center; font-weight: normal; font-size: 2.4rem;">
         誘蛾灯の導き
     </h1>
     <p style="text-align: center;">ファントムシータ 非公式 ファンサイト</p>
-</div>
+</div> -->
 
-<!-- <div id="kv-container">
+<div id="kv-container">
     <div class="kv-sp">
         <div class="protected-img-wrapper">
-            <img src="/static/kv-sp.png" alt="誘蛾灯の導き kv-sp" class="protected-img">
+            <img src="/static/kv-sp.jpeg" alt="誘蛾灯の導き kv-sp" class="protected-img">
         </div>
     </div>
     <div class="kv-pc">
         <div class="protected-img-wrapper">
-            <img src="/static/kv-pc.png" alt="誘蛾灯の導き kv-pc" class="protected-img">
+            <img src="/static/kv-pc.jpeg" alt="誘蛾灯の導き kv-pc" class="protected-img">
         </div>
     </div>
-</div> -->
+</div>
 
 <style>
     .kv-sp {
